--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "styles/fonts";
-@import "styles/drop-default-styles";
-@import "styles/header";
-@import "styles/section1";
+@import 'styles/fonts';
+@import 'styles/_set-default-styles';
+@import 'styles/header';
+@import 'styles/section1';
