--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,2 +1,34 @@
+//fonts example start
 @font-face {
+  font-family: 'Verdana';
+  src:
+    local('Verdana Regular'),
+    local('Verdana-Regular'),
+    url('../fonts/Verdana.woff2') format('woff2'),
+    url('../fonts/Verdana.woff') format('woff'),
+    url('../fonts/Verdana.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Verdana';
+  src:
+    local('Verdana Bold'),
+    local('Verdana-Bold'),
+    url('../fonts/Verdana-Bold.woff2') format('woff2'),
+    url('../fonts/Verdana-Bold.woff') format('woff'),
+    url('../fonts/Verdana-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GothamPro-Light';
+  src: url('../fonts/GothamPro-Light.woff');
+}
+
+@font-face {
+  font-family: 'GothamPro-Bold';
+  src: url('../fonts/GothamPro-Bold.woff');
 }
