--- a/src/styles/_set-default-styles.scss
+++ b/src/styles/_set-default-styles.scss
@@ -28,7 +28,7 @@ body {
   font-family: var(--main-font-family);
   font-size: 14px;
 
-  color: red;
+  color: #000;
   letter-spacing: 0.04em;
   max-width: 100%;
 }
