Added corrections to package.json, webpack.config.js

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,10 @@
-@import 'styles/fonts';
+@import 'styles/_fonts';
 @import 'styles/_set-default-styles';
-@import 'styles/header';
-@import 'styles/section1';
+@import 'styles/_header';
+@import 'styles/_hero';
+@import 'styles/section-about';
+@import 'styles/_section-contact-us';
+@import 'styles/_section-contact-us';
+@import 'styles/_section-our-projects';
+@import 'styles/_section-our-tasks';
+@import 'styles/_footer';
