--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,13 @@
-<header>I am a header!</header>
+<header>
+    <nav>
+        <svg class="header-logo">
+            <use href="./assets/sprite.svg#logo"></use>
+        </svg>
+        <ul>
+            <li>About company</li>
+            <li>Our project</li>
+            <li>Our team</li>
+            <li>Contact us</li>
+        </ul>
+    </nav>
+</header>
