Added corrections. Cleared structure

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,9 +2,5 @@
 @import 'styles/_set-default-styles';
 @import 'styles/_header';
 @import 'styles/_hero';
-@import 'styles/section-about';
-@import 'styles/_section-contact-us';
-@import 'styles/_section-contact-us';
-@import 'styles/_section-our-projects';
-@import 'styles/_section-our-tasks';
+@import 'styles/section-1';
 @import 'styles/_footer';
