--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,3 @@
 <header>
-    <nav>
-        <svg class="header-logo">
-            <use href="./assets/sprite.svg#logo"></use>
-        </svg>
-        <ul>
-            <li>About company</li>
-            <li>Our project</li>
-            <li>Our team</li>
-            <li>Contact us</li>
-        </ul>
-    </nav>
+    Header is here!
 </header>
