--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
-@import 'styles/_fonts';
-@import 'styles/_set-default-styles';
-@import 'styles/_header';
-@import 'styles/_hero';
-@import 'styles/section-1';
-@import 'styles/_footer';
+@use 'styles/_fonts';
+@use 'styles/_set-default-styles';
+@use 'styles/_header';
+@use 'styles/_hero';
+@use 'styles/section-1';
+@use 'styles/_footer';
