--- a/src/partials/section-1.html
+++ b/src/partials/section-1.html
@@ -1,3 +1,4 @@
 <section>
-    <h2>Section-1 is here!</h2>
+  <h2>Section-1 is here!</h2>
+  <img src="../assets/avatar.png" alt="avatar" />
 </section>
